--- a/.env
+++ b/.env
@@ -10,3 +10,10 @@ AZURE_VAULT_URL=https://keyvault-azure-demo.vault.azure.net/
 # azure storage credentials
 AZURE_STORAGE_URL=https://azureblobstoragegaurav.blob.core.windows.net/
 AZURE_STORAGE_CONTAINER=storagecontainer
+
+# mysql credentials
+MYSQL_DATABASE=book_store
+MYSQL_USER=Gaurav
+MYSQL_PASSWORD=Gaurav@2003
+DB_ROOT_PASSWORD=Gaurav@2003
+MYSQL_HOST=localhost
