--- a/requirements.txt
+++ b/requirements.txt
@@ -32,6 +32,7 @@ pillow==10.2.0
 platformdirs==4.1.0
 pluggy==1.4.0
 portalocker==2.8.2
+psycopg2-binary==2.9.9
 pycparser==2.21
 PyJWT==2.8.0
 PyMySQL==1.1.0
