--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ charset-normalizer==3.3.2
 cryptography==41.0.7
 defusedxml==0.7.1
 distlib==0.3.8
-Django==5.0.1
+Django==4.2.9 # change to 5.0.1
 django-allauth==0.60.1
 django-cors-headers==4.3.1
 djangorestframework==3.14.0
