--- a/requirements.txt
+++ b/requirements.txt
@@ -47,6 +47,6 @@ requests-oauthlib==1.3.1
 six==1.16.0
 sqlparse==0.4.4
 typing_extensions==4.9.0
-urllib3==2.1.0
+# urllib3==2.1.0
 virtualenv==20.25.0
 wheel==0.42.0
