--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ charset-normalizer==3.3.2
 cryptography==41.0.7
 defusedxml==0.7.1
 distlib==0.3.8
-Django==4.2.9
+Django==5.0.1
 django-allauth==0.60.1
 django-cors-headers==4.3.1
 djangorestframework==3.14.0
@@ -19,6 +19,7 @@ djangorestframework-simplejwt==5.3.1
 drf-extra-fields==3.7.0
 filelock==3.13.1
 filetype==1.2.0
+gunicorn==21.2.0
 idna==3.6
 iniconfig==2.0.0
 isodate==0.6.1
@@ -47,5 +48,6 @@ requests-oauthlib==1.3.1
 six==1.16.0
 sqlparse==0.4.4
 typing_extensions==4.9.0
+urllib3==2.1.0
 virtualenv==20.25.0
 wheel==0.42.0
